--- a/cron/arbitrum/package.json
+++ b/cron/arbitrum/package.json
@@ -1,13 +1,24 @@
 {
   "name": "hard-worker-arbitrum",
+  "license": "ISC",
+  "scripts": {
+    "clean": "npx hardhat clean",
+    "typechain": "npx hardhat typechain"
+  },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@typechain/ethers-v5": "^10.0.0",
+    "@typechain/hardhat": "^6.0.0",
     "chai": "^4.3.6",
+    "dotenv": "^16.0.0",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.2",
-    "hardhat": "^2.8.2",
+    "hardhat": "^2.9.2",
+    "ts-node": "^10.7.0",
+    "typechain": "^8.0.0",
+    "typescript": "^4.6.3",
     "web3": "^1.6.1"
   },
   "dependencies": {
