--- a/cron/arbitrum/tsconfig.json
+++ b/cron/arbitrum/tsconfig.json
@@ -2,9 +2,10 @@
   "compilerOptions": {
     "outDir": "./dist",
     "allowJs": true,
-    "target": "es2018",
+    "target": "es2019",
     "module": "CommonJS",
     "strict": true,
+    "resolveJsonModule": true,
     "esModuleInterop": true,
     "rootDirs": [
       "./src",
