--- a/package.json
+++ b/package.json
@@ -54,14 +54,17 @@
     "web3-utils": "1.3.4"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "babel-eslint": "10.1.0",
     "chai": "4.3.4",
-    "eslint": "7.21.0",
+    "eslint": "^8.12.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-prettier": "3.3.1",
     "mocha": "9.0.3",
     "prettier": "2.2.1",
-    "supertest": "6.1.4"
+    "supertest": "6.1.4",
+    "typescript": "^4.6.3"
   }
 }
